--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-Build/
-xcuserdata/
-Carthage/
-Pods/
-*.xcworkspace
 .DS_Store
-
-*.lock
-*.resolved
-
-ioswatsonassistantexample-Swift/ioswatsonassistantexample/BMSCredentials.plist
-ios_swift/ioswatsonassistantexample/BMSCredentials.plist
+BMSCredentials.plist
+Pods/
