--- a/iosapp/BMSCredentials.plist
+++ b/iosapp/BMSCredentials.plist
@@ -2,15 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>conversationUsername</key>
-    <string>REPLACEME.conversationServiceName.username</string>
-    <key>conversationPassword</key>
-    <string>REPLACEME.conversationServiceName.password</string>
-    <key>conversationApikey</key>
-    <string>REPLACEME.conversationServiceName.apikey</string>
-    <key>conversationUrl</key>
-    <string>https://gateway.watsonplatform.net/conversation/api</string>
-    <key>appName</key>
-    <string>ioswatsonassistantexample</string></dict>
+	<key>conversation</key>
+	<dict>
+		<key>apikey</key>
+		<string>REPLACEME.conversationServiceName.apikey</string>
+		<key>url</key>
+		<string>REPLACEME.conversationServiceName.url</string>
+	</dict>
+	<key>appName</key>
+	<string>iosvirtualassistantapp</string>
+</dict>
 </plist>
-
