Readme updates and workspace ID template in credentials file

--- a/iosapp/BMSCredentials.plist
+++ b/iosapp/BMSCredentials.plist
@@ -9,6 +9,8 @@
 		<key>url</key>
 		<string>REPLACEME.conversationServiceName.url</string>
 	</dict>
+	<key>workspaceID</key>
+	<string>REPLACEME.workspaceID</string>
 	<key>appName</key>
 	<string>iosvirtualassistantapp</string>
 </dict>
